[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskradar-enterprise"
version = "0.1.0"
description = "Enterprise-grade risk management platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jason Teixeira", email = "jason@riskradar.com" }
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=services --cov-report=term-missing"
testpaths = [
    "tests",
    "services/*/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
